Finalizacion de pagina pasatiempos 2

--- a/atchz/pasatiempos2/pasatiempo2.html
+++ b/atchz/pasatiempos2/pasatiempo2.html
@@ -1,9 +1,178 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pasatiempo 2</title>
-  </head>
-  <body></body>
+<html lang="es-MX">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="atchz" />
+        <meta name="description" content="Pagina sobre mi segundo pasatiempo" />
+        <meta name="keywords" content="uanl,facpya,lti" />
+        <title>Pasatiempo 2</title>
+    </head>
+    <body>
+        <header>
+            <h1>Segundo pasatiempo</h1>
+        </header>
+        <main>
+            <article>
+                <header><h2>Leer libros</h2></header>
+
+                <p>
+                    Mi segundo pasatiempo favorito es la lectura. Aunque no
+                    siempre la practico tanto como jugar a videojuegos, la
+                    disfruto muchísimo cuando me doy el tiempo de hacerlo. Leer
+                    me permite tranquilizarme cuando lo necesito, es una
+                    actividad que me relaja, siento que me da ese espacio
+                    personal de silencio que de vez en cuando necesito y me
+                    ayuda a distraerme mientras disfruto de la historia que este
+                    leyendo.
+                </p>
+                <img
+                    src="https://images.pexels.com/photos/694740/pexels-photo-694740.jpeg"
+                    alt="libros apilados"
+                    width="300px"
+                />
+
+                <section>
+                    <header>
+                        <h3>Tabla sobre libros:</h3>
+                    </header>
+
+                    <table border="1">
+                        <colgroup>
+                            <col style="width: 30%" />
+                            <col style="width: 50%" />
+                            <col style="width: 20%" />
+                        </colgroup>
+
+                        <thead>
+                            <tr>
+                                <th colspan="3">
+                                    Algunos de los libros que he leido:
+                                </th>
+                            </tr>
+                            <tr>
+                                <th>Libro</th>
+                                <th>Descripción</th>
+                                <th>Autor</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td><cite>El misterio de Salem's Lot</cite></td>
+                                <td>
+                                    Novela de terror que explora la influencia
+                                    del mal en un pequeño pueblo.
+                                </td>
+                                <td><cite>Stephen King</cite></td>
+                            </tr>
+                            <tr>
+                                <td><cite>La larga marcha</cite></td>
+                                <td>
+                                    Distopía sobre un concurso mortal donde los
+                                    participantes deben marchar hasta morir.
+                                </td>
+                                <td>
+                                    <cite>Stephen King (Richard Bachman)</cite>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><cite>El imperio final</cite></td>
+                                <td>
+                                    Primer libro de la trilogía Mistborn, sobre
+                                    magia y rebelión en un mundo opresivo.
+                                </td>
+                                <td><cite>Brandon Sanderson</cite></td>
+                            </tr>
+                            <tr>
+                                <td><cite>El pozo de la ascensión</cite></td>
+                                <td>
+                                    Segundo libro de la trilogía Mistborn,
+                                    continúa la lucha por mantener la libertad y
+                                    el poder.
+                                </td>
+                                <td><cite>Brandon Sanderson</cite></td>
+                            </tr>
+                            <tr>
+                                <td><cite>Proyecto Hail Mary</cite></td>
+                                <td>
+                                    Ciencia ficción sobre un astronauta
+                                    intentando salvar a la humanidad de una
+                                    catástrofe.
+                                </td>
+                                <td><cite>Andy Weir</cite></td>
+                            </tr>
+                        </tbody>
+
+                        <tfoot>
+                            <tr>
+                                <td colspan="3">
+                                    Estos son algunos de mis libros favoritos
+                                    hasta ahora.
+                                </td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </section>
+
+                <footer>
+                    <h4>Pequeño fragmento del Libro Hail Mary:</h4>
+                    <audio
+                        controls
+                        src="https://samples.megustaleer.com/9788418037122.mp3"
+                    ></audio>
+                    <cite
+                        >Fuente:
+                        <a
+                            href="https://www.penguinlibros.com/mx/ciencia-ficcion/254101-libro-proyecto-hail-mary-9786073802536"
+                            >Penguin Libros</a
+                        ></cite
+                    >
+                </footer>
+            </article>
+        </main>
+        <aside>
+            <h4>Links para revisar los libros</h4>
+            <nav>
+                <ul>
+                    <li>
+                        <a
+                            target="_blank"
+                            href="https://www.penguinlibros.com/mx/fantasia/309635-libro-el-misterio-de-salem-s-lot-9786073816861"
+                            >El misterio de Salem's Lot</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            target="_blank"
+                            href="https://www.penguinlibros.com/mx/ciencia-ficcion/342622-libro-la-larga-marcha-9786073843607"
+                            >La Larga Marcha</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            target="_blank"
+                            href="https://www.penguinlibros.com/mx/ciencia-ficcion/277868-libro-el-imperio-final-nacidos-de-la-bruma-mistborn-1-9788466658898"
+                            >El imperio final</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            target="_blank"
+                            href="https://www.penguinlibros.com/mx/ciencia-ficcion/254101-libro-proyecto-hail-mary-9786073802536"
+                            >Proyecto Hail Mary</a
+                        >
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+        <footer>
+            <p>
+                <abbr title="Universidad Autónoma de Nuevo León">UANL</abbr> -
+                <abbr title="Facultad de Contaduría Pública y Administración"
+                    >FACPYA</abbr
+                >
+            </p>
+        </footer>
+    </body>
 </html>
