Base de la pagina del tercer pasatiempo

--- a/atchz/pasatiempos2/pasatiempo3.html
+++ b/atchz/pasatiempos2/pasatiempo3.html
@@ -1,9 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pasatiempo 3</title>
-  </head>
-  <body></body>
+<html lang="es-MX">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="atchz" />
+        <meta name="description" content="Pagina sobre mi tercer pasatiempo" />
+        <meta name="keywords" content="uanl,facpya,lti" />
+        <title>Pasatiempo 3</title>
+    </head>
+    <body>
+        <header>
+            <h1>Tercer pasatiempo</h1>
+        </header>
+        <main>
+            <article>
+                <header><h2>Ver series</h2></header>
+
+                <p>
+                    Ver series es otro de mis pasatiempos. Me gusta porque me
+                    permite ver historias interesantes por largas horas. Además
+                    me gusta tambien mirar series por el simple hecho de que
+                    puedo hacerlo acompañado con mi familia, amigos y mi novia.
+                </p>
+
+                <img
+                    src="https://images.pexels.com/photos/4009409/pexels-photo-4009409.jpeg"
+                    alt="pareja viendo la television"
+                    width="300px"
+                />
+
+                <section>
+                    <header>
+                        <h3></h3>
+                    </header>
+                </section>
+
+                <footer></footer>
+            </article>
+        </main>
+        <aside>
+            <h4>Links para revisar las series mencionadas:</h4>
+            <nav>
+                <ul>
+                    <li>
+                        <a target="_blank" href=""></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href=""></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href=""></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href=""></a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+        <footer>
+            <p>
+                <abbr title="Universidad Autónoma de Nuevo León">UANL</abbr> -
+                <abbr title="Facultad de Contaduría Pública y Administración"
+                    >FACPYA</abbr
+                >
+            </p>
+        </footer>
+    </body>
 </html>
