--- a/FernandaGomezG/index.html
+++ b/FernandaGomezG/index.html
@@ -43,7 +43,7 @@
     </main>
     <aside></aside>
     <footer>
-        <p style="color: rgb(70, 70, 182);"><strong>por Fernanda Nohemí Gómez García, Grupo 52</strong></p>
+        <p style="color: rgb(70, 70, 182);"><strong> Desarrollado por Fernanda Nohemí Gómez García, Grupo 52</strong></p>
     </footer>
 </body>
 </html>
