--- a/FernandaGomezG/practica3/index.html
+++ b/FernandaGomezG/practica3/index.html
@@ -46,9 +46,14 @@
             <td><a href="pagina4.html">Instrumentos</a></td>
             <td>8 años (Primaria)</td>
        </table>
-       <h2>Forma de contacto</h2>
-    </main>
+       
     <aside></aside>
-    <footer></footer>
+    <footer>
+    <h2 style="margin: 15px;">Forma de contacto</h2>
+    <address style="padding: 15px;">
+        <a href="correo.ejemplo@gmail.com">Correo Personal</a>
+        </address>
+    </main>
+    </footer>
 </body>
 </html>
