Se referencio a mi carpeta en el index principal

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li id="a29"><a href="#">RAMIREZ ESCOBEDO JESUS ALEJANDRO </a></li>
           <li id="a30"><a href="NerickRamirez/index.html">NerickRamirez</a></li>
           <li id="a31"><a href="Bejesusrey/index.html">Bejesusrey </a></li>
-          <li id="a32"><a href="AscuOnTop">AscuOnTop </a></li>
+          <li id="a32"><a href="AscuOnTop/index.html">AscuOnTop </a></li>
           <li id="a33"><a href="aaronrdzr/index.html">aaronrdzr </a></li>
           <li id="a34"><a href="gfuelinme/index.html">gfuelinme</a></li>
           <li id="a35"><a href="aLe.php27/index.html">aLe.php27</a></li>
@@ -53,7 +53,7 @@
           <li id="a38"><a href="ianstiglitz/index.html">IanStiglitz</a></li>
           <li id="a39"><a href="#">TREVIÑO SUAREZ LUCA RAMON </a></li>
           <li id="a40"><a href="#">VALERIO AGUIRRE GISELLE NAHOMI </a></li>
-          <li id="a41"><a href="#">VALLEJO MALDONADO DANIEL ARTURO </a></li>
+          <li id="a41"><a href="danielvm216/index.html">danielvm216 </a></li>
           <li id="a42"><a href="KingBootleg/index.html">KingBootleg </a></li>
           <li id="a43"><a href="#">YAÑEZ LERMA JASHIA ESDREY </a></li>
           <li id="a44"><a href="Hugo-0699/index.html">Hugo-0699 </a></li>
