--- a/NerickRamirez/index.html
+++ b/NerickRamirez/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evidencias</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
@@ -24,6 +25,15 @@
         </ul>
         <h2>Fechas</h2>
         <p>Del 14 al 15 de agosto del 2025</p>
+
+        <hr>
+
+        <h1>Practica 2</h1>
+        <p>
+            En esta práctica se creó una carpeta personal en la organización y dentro de la misma se agregó un archivo llamado index.html.
+        </p>
+        <h2>Fechas</h2>
+        <p>Del 20 al 22 de agosto del 2025</p>
 
         <hr>
 
