Agregamos la plantilla base de lo que seria cada una de las paginas de los pasatiempos

--- a/AlejandroRmzEsc/pasatiemposv2/hobbie2.html
+++ b/AlejandroRmzEsc/pasatiemposv2/hobbie2.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" translate="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Musica</title>
 </head>
 <body>
-    
+    <header>
+        <h1>
+            <strong>Musica</strong>
+        </h1>
+    </header>
+    <main>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium praesentium quasi illum eveniet, odit fuga maxime! Dignissimos et, dolorum repellendus nostrum saepe dolorem, itaque perferendis esse eos ullam ea doloremque.</p>
+
+        <table>
+            <tr>
+                <th>Nombre</th>
+                <th>Genero</th>
+                <th>Artista</th>
+                <th>Video</th>
+            </tr>
+            <tr>
+                <td>The real slim shady</td>
+                <td>Rap</td>
+                <td>Eminem</td>
+                <td><iframe width="300px"src="https://www.youtube.com/embed/Y8ZI1uc6iBM?si=AsVIMEsWhDsmd8gV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+            </tr>
+            <tr>
+                <td>25/8</td>
+                <td>Reggaeton</td>
+                <td>Bad Bunny</td>
+                <td><iframe width="300" src="https://www.youtube.com/embed/9nZ6w9JvQl0?si=U05HYDTtURi7RXRM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+            </tr>
+            <tr>
+                <td>A ptophecy</td>
+                <td>Metal</td>
+                <td>Asking Alexandria</td>
+                <td><iframe width="300" src="https://www.youtube.com/embed/tQblSS2kl4Q?si=LneOwY_eH4B2Bf-i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+            </tr>
+
+        </table>
+    </main>
+
 </body>
+<footer>
+    <p>© 2025 Todos los derechos reservados</p>
+</footer>
 </html>
