--- a/AlejandroRmzEsc/pasatiemposv2/hobbie3.html
+++ b/AlejandroRmzEsc/pasatiemposv2/hobbie3.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Videojuegos</title>
 </head>
 <body>
     <header>
         <h1>
-            <strong>Manejar</strong>
+            <strong>Videojuegos</strong>
         </h1>
     </header>
     <main>
