--- a/AlejandroRmzEsc/pasatiemposv2/index.html
+++ b/AlejandroRmzEsc/pasatiemposv2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" translate="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,26 @@
     <title>Pasatiemposv2</title>
 </head>
 <body>
-    <header></header>
-    <nav></nav>
-    
+    <header>
+        <h1><strong></strong></h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="hobbie1.html">hobbie1</a></li>
+            <li><a href="hobbie2.html">hobbie2</a></li>
+            <li><a href="hobbie3.html">hobbie3</a></li>
+            <li><a href="hobbie4.html">hobbie4</a></li>
+            <li><a href="hobbie5.html">hobbie5</a></li>
+        </ul>
+    </nav>
+    <main>
+
+    </main>
+    <aside>
+
+    </aside>
 </body>
+<footer>
+    <p>© 2025 Todos los derechos reservados</p>
+</footer>
 </html>
