--- a/luca384/index.html
+++ b/luca384/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabajo 2</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1 style="color: rgb(108, 145, 158)">Evidencia de Fundamentos de desarrollo web</h1>
-        <h2>Práctica 1: Pasatiempos</h2>
+        <h1 style="color: rgb(131, 168, 182)">Evidencia de Fundamentos de desarrollo web</h1>
+        <h2>Práctica 1:Realización de Pagina de Pasatiempos</h2>
         <p>Se realizo una pagina en donde se mostraban algunos pasatiempos, usando diferentes elemntos mostrados en clase.</p>
         <p>Link solicitados: </p>
         <ul>        
@@ -17,9 +18,24 @@
             <li><a href="https://github.com/luca384/Ev1_FdDW/commits/main/">Página de commits</a></li>
         </ul>
 
+        <h2>Practica 2:Creacion de Carpeta Personal en el Repositorio </h2>
+        <p>En esta practica se solicito que crearamos una carpeta para trabajar en ella en el repositorio conjunto de la clase</p>
+        <ul class="links">
+            <li><a href="https://github.com/FDW52AD2025/website52/tree/main/luca384">Carpeta luca384</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/blob/main/luca384/index.html">Archivo HTML</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=luca384">Commits de practica 2</a></li>
+        </ul>
+
+        <h2>Practica 3:Modificacion de la pagina personal </h2>
+        <p>Aqui modificamos la pagina de gustos personales, agregando 5 secciones para dividir los gustos en lugar que esten en 1 sola pagina</p>
+        <ul class="links">
+            <li><a href="HobbiesVer2/index.html">Pagina de Mis gustos Peronales</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/">Todos los Commits</a></li>
+        </ul>
+
     </header>
-    <main></main>
-    <aside></aside>
-    <footer></footer>
+
+    <footer>© 2025 Practica 3 - Todos los derechos reservados Política de privacidad</footer>
 </body>
 </html>
+
