--- a/Bejesusrey/pasatiemposV2/index.html
+++ b/Bejesusrey/pasatiemposV2/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <header>Mis Pasatiempos</header>
+    <header><strong>&#11088;Mis Pasatiempos</strong></header>
     <main>
         <nav>
             <ul>
@@ -20,8 +20,7 @@
         </nav>
     </main>
     <aside>
-        <h2>Dato Extra</h2>
-        <p>Lo que espero de mi para esta actividad es poder practicar todo lo aprendido en clase y se me facilite las siguientes practicas</p>
+        <p><i>Lo que espero de mi para esta actividad es poder practicar todo lo aprendido en clase y se me facilite las siguientes practicas</i></p>
     </aside>
     <footer>
         <p>&copy; Creado por Jesus Reyes</p>
