--- a/Bejesusrey/pasatiemposV2/pagina3.html
+++ b/Bejesusrey/pasatiemposV2/pagina3.html
@@ -3,10 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Tercer Pasatiempo">
+    <meta name="Keywords" content="Video Juegos, Play Station y Nintendo">
+    <meta name="Author" content="Jesus Alberto Reyes Lara">
+    <link rel="stylesheet" href="estilo.css">
     <title>Pasatiempo3</title>
 </head>
 
 <body>
-    
+    <header>
+        <h1><strong>&#127918;Video Juegos</strong></h1>
+    </header>
+    <main>
+
+        <header>
+            <h2>Play Station y Nintendo</h2>
+        </header>
+
+        <p>Los videojuegos han formado parte de mi vida desde que me regalaron mi primera consola portatil que fue una <abbr title="Play Station Portable">PSP</abbr>.</p>
+        <p>A lo largo de los años eh tenido varias consolas como:</p>
+        <ul>
+            <li>PSP</li>
+            <li>Game Cube</li>
+            <li>Play Station 2</li>
+            <li>Play Station 3</li>
+            <li>Wii U</li>
+            <li>Switch</li>
+            <li>Play Station 5</li>
+        </ul>
+        
+    </main>
+
+    <aside>
+        <p><small>Uno de mis primeros juegos favoritos fue Super Smash Bros</small></p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/RXs4-M-ZiOg?si=-hbOpzCGB-iEtI6v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </aside>
+
+    <footer>
+        <p><b>Esta pagina es un bonito recuerdo de mi infancia</b></p>
+        <p>&copy; Creado por Jesus Reyes</p>
+    </footer>
+    <p class="regresar"><a href="index.html">Regresar a Pagina Principal</a></p>
+
 </body>
 </html>
