--- a/Bejesusrey/index.html
+++ b/Bejesusrey/index.html
@@ -3,35 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practicas</title>
+    <title>Pagina de Evidencias/Practicas</title>
 </head>
+
 <body>
 
     <header>
-        <h1>Evidencias Fundamento de Desarrollo Web</h1>
+        <h1><strong>Evidencias Fundamento de Desarrollo Web</strong></h1>
     </header>
 
     <main>
-        <p>En esta pagina describo lo que se hizo en la primera practica donde utilizamos varias etiquetas como meta, title, header, main,footer, article, section, img, p y el uso de un archivo externo css 
-        </p>
+
+        <section>
+            <h2>Primera Practica</h2>
+            <article>
+                <p>En esta primera practica se nos pidió que publicaramos una pagina web sencilla en nuestra cuenta personal de Github.</p>
+                <p>Aqui hicimos uso de varias etiquetas como meta, title, header, main, footer, article, section, img, p y el uso de un archivo externo css.</p>
+                <p>Creamos una pagina con html sobre nuestros pasatiempos</p>
+                <ul>
+                    <li><a href="https://github.com/Bejesusrey?tab=repositories">Link del repositorio</a></li>
+                    <li><a href="https://bejesusrey.github.io/Ev1Practica1/">Link de sitio publicado</a></li>
+                    <li><a href="https://github.com/Bejesusrey/Ev1Practica1/commits/main/">Link de los commits</a></li>
+                </ul>
+                <p><b>Fecha de Commits: 13 al 15 de Agosto</b></p>
+            </article>
+        </section>
         <hr>
 
-        <h2>El uso de "Meta"</h2>
-        <p></p>
-
-        <ul>
-            <li><a href="https://github.com/Bejesusrey?tab=repositories">Link del repositorio</a></li>
-            <li><a href="https://bejesusrey.github.io/Ev1Practica1/">Link de sitio publicado</a></li>
-            <li><a href="https://github.com/Bejesusrey/Ev1Practica1/commits/main/">Link de los commits</a></li>
-        </ul>
-
+        <section>
+            <h2>Segunda Practica</h2>
+            <article>
+                <p>En esta segunda práctica se creó una carpeta personal en la organización y dentro de la misma se agregó un archivo llamado index.html.</p>
+                <p>El archivo index.html será mi página personal y se nos solicitó agregar los links de la primera práctica.</p>
+                <ul>
+                    <li><a href=""></a>Link Pagina Personal de Evidencias</li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bejesusrey?since=2025-08-20&until=2025-08-22"></a>Link Commits</li>
+                </ul>
+                <p><b>Fecha de Commits: 20 al 22 de Agosto</b></p>
+            </article>
+        </section>
         <hr>
 
-        <ul>
-            <li><a href="">Link de Pagina Personal</a></li>
-            <li><a href="">Link Commits Trabajo en Clase 27 de agosto</a></li>
-            <li><a href="">Link de los Commits</a></li>
-        </ul>
+        <section>
+            <h2>Tercera Practica</h2>
+            <article>
+                <p>En está tercera practica realizamos la versión 2.0 sobre nuestros pasatiempos, pero esta vez lo guardamos en la organización.</p>
+                <p>Se nos pidió que crearamos 5 archivos html para la información de los pasatiempos.</p>
+                <p>En cada documento html utilizamos etiquetas de estructura (header,nav, main,aside,footer) para llevar un orden en cada pagina.</p>
+                <p>Ademas agregamos nuevas etiquetas que realizamos en practicas durante la clase</p>
+                <ul>
+                    <li><a href="">Link de Pagina Personal</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bejesusrey?since=2025-08-27&until=2025-08-29">Link Commits Trabajo en Clase 27 de agosto</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits?author=Bejesusrey">Link de los Commits</a></li>
+                </ul>
+                <p><b>Fecha de Commits: 27 al 29 de Agosto</b></p>
+            </article>
+        </section>
 
     </main>
     
