se añadieron links referentes a las series

--- a/atchz/pasatiempos2/pasatiempo3.html
+++ b/atchz/pasatiempos2/pasatiempo3.html
@@ -144,6 +144,20 @@
                     <li lang="en">
                         <a
                             target="_blank"
+                            href="https://www.imdb.com/title/tt3032476/?ref_=nv_sr_srsg_6_tt_5_nm_3_in_0_q_bette"
+                            >Better Call Saul</a
+                        >
+                    </li>
+                    <li lang="en">
+                        <a
+                            target="_blank"
+                            href="https://www.imdb.com/title/tt5290382/?ref_=nv_sr_srsg_0_tt_8_nm_0_in_0_q_mindhun"
+                            >Mindhunter</a
+                        >
+                    </li>
+                    <li lang="en">
+                        <a
+                            target="_blank"
                             href="https://www.imdb.com/title/tt0898266/?ref_=nv_sr_srsg_0_tt_8_nm_0_in_0_q_the%2520bi"
                             >The Big Bang Theory</a
                         >
