Retoques finales a la página principal con estilos CSS e imágenes, también se corrigieron errores en los pasatiempos 1 y 2, y se cambío el nombre de la pagina1.html a pasatiempo1.html

--- a/Hugo-0699/pasatiemposmod/index.html
+++ b/Hugo-0699/pasatiemposmod/index.html
@@ -7,10 +7,28 @@
     <meta name="description" content="Pasatiempos de Hugo Alejandro Zapata Rosales">
     <meta name="keywords" content="dibujo, videojuegos, gym, escritura">
     <meta name="author" content="Hugo Alejandro Zapata Rosales">
+    <link rel="stylesheet" href="estilos.css">
     <link rel="icon" href="imagenes/icono-inicial.png" type="image/png">
 </head>
-<body>
-
-    
+<body class="bodyprincipal">
+    <header class="headerprincipal">
+        <h1>Mis pasatiempos</h1>
+    </header>
+    <main>
+        <ul class="ulprincipal">
+            <li class="liprincipal"><a class="aprincipal" href="pasatiempo1.html">El Dibujo</a></li>
+            <li class="liprincipal"><a class="aprincipal" href="pasatiempo2.html">Los Video-Juegos</a></li>
+            <li class="liprincipal"><a class="aprincipal" href="pasatiempo3.html">GYM</a></li>
+            <li class="liprincipal"><a class="aprincipal" href="pasatiempo4.html">La Escritura</a></li>
+        </ul>
+        <br>
+        <center><img class="imgprincipal" width="400" src="imagenes/img-perfil-maki.jpeg"></center>
+    </br>
+    </main>
+    <footer class="copyright">
+        <address>
+            <p>Desarrollado por el alumno: Hugo Alejandro Zapata Rosales</p>
+        </address>
+    </footer>
 </body>
 </html>
