--- a/Hugo-0699/pasatiemposmod/pasatiempo2.html
+++ b/Hugo-0699/pasatiemposmod/pasatiempo2.html
@@ -17,7 +17,7 @@
             <header>
                 <h2>Llegamos a otro pasatiempo muy bueno 😁🙌</h2>
             </header>
-            <h3>Actualmente no poseo ninguna consola como una PlayStation o una Xbox, pero tengo una Nintendo Switch; además, tengo mi laptop con varios juegos que compré en la plataforma de Steam y otros que descargué de sitios externos. Entre todos los que tengo destacan:</h3>
+            <h3>Actualmente no poseo ninguna consola como una PlayStation o una Xbox, pero tengo una Nintendo Switch y también tengo mi laptop con varios juegos que compré en la plataforma de Steam y otros que descargué de sitios externos. Entre todos los que tengo destacan:</h3>
 
             <section class="contenedor-img">
                 <img width="300px" src="imagenes/batman2.jpg" alt="Un videojuego de Batman hecho por rokcsteady">
@@ -25,10 +25,10 @@
                     <dt>
                        <strong>BATMAN ARKHAM ASYLUM</strong> 
                     </dt>
-                    <dd>Es un videojuego de acción y aventura en el que tomamos el papel de Batman para frustrar los planes del Joker y sus villanos por tomar el control del psiquiátrico de Arkham. El juego tiene un sistema de combate cuerpo a cuerpo conocido como "Hakan slash" (la parte más adictiva del juego), posee distintos tipos de gadgets, modo sigilo, entre otros. El juego se destaca por su atmósfera oscura y con toques medio creppys, una jugabilidad que permite explorar la isla y combatir a enemigos usando el entorno, además de una narrativa original que ha sido elogiada por capturar la esencia de Batman. Es tan bueno que lo me acabé en la dificultad dificil como 5 veces al 100%.
+                    <dd>Es un videojuego de acción y aventura en el que tomamos el papel de Batman para frustrar los planes del Joker y sus villanos por tomar el control del psiquiátrico de Arkham. El juego tiene un sistema de combate cuerpo a cuerpo conocido como "Hakan slash" (la parte más adictiva del juego), también posee distintos tipos de gadgets, modo sigilo, entre otros. El juego se destaca por su atmósfera oscura y con toques medio creppys, una jugabilidad que permite explorar la isla y combatir a los enemigos usando el entorno, además de una narrativa original que ha sido elogiada por capturar toda la esencia de lo que es Batman. Es tan bueno que lo me acabé en la dificultad dificil como 5 veces al 100%. ¡La nostalgia pega fuerte!
                     </dd>
                     <hr>
-                    <dd>Sitio oficial para la descarga: <a href="">Batman Arkham Asylum para PC</a> </dd>
+                    <dd>Sitio oficial para la descarga: <a href="https://store.steampowered.com/app/35140/Batman_Arkham_Asylum_Game_of_the_Year_Edition/?l=spanish">Batman Arkham Asylum para PC</a> </dd>
                 </dl>
             </section>
 
@@ -50,8 +50,8 @@
                     <dt>
                         <strong>MINECRAFT</strong>
                     </dt>
-                    <dd>Es un popular videojuego tipo "sandbox" donde los jugadores exploran un mundo de bloques, extraen recursos, construyen y combaten criaturas para sobrevivir o crear obras de arte. Su mecánica central permite total libertad para manipular un entorno generado al azar, ofreciendo modos de juego como el de supervivencia, que requiere fabricar herramientas y defenderse, y el creativo, que facilita la construcción de estructuras complejas. Un clasico.</dd>
-                    <dd>De hecho lo estoy jugando en un servidor con mis amigos llamado PlanetaLTI 3 y es aún más interesante, ya que le metimos mas 150 mods.</dd>
+                    <dd>Popular desde su salida en 2009. Minecraft es un juego tipo <i>"sandbox"</i> en el que los jugadores exploran un mundo de bloques, extraen recursos, construyen y combaten criaturas para sobrevivir o crear auténticas obras de arte. Su mecánica central ofrece total libertad para manipular un entorno generado de forma aleatoria, con modos de juego como el de supervivencia y el modo creativo.</dd>
+                    <dd>De hecho lo estoy jugando en un servidor con mis amigos, se llama PlanetaLTI 3 y es aún más interesante, ya que le metimos mas 150 mods y será todo un espectáculo .</dd>
                     <hr>
                     <dd>Sitio oficial para la descarga: <a href="https://www.minecraft.net/es-es">Minecraft para PC</a> </dd>
                 </dl>
@@ -63,10 +63,11 @@
                     <dt>
                         <strong>LEFT 4 DEAD</strong>
                     </dt>
-                    <dd>Esta es una que todos se saben, el clasico de clasicos, <abbr title="L4D">Left 4 Dead</abbr> es un videojuego cooperativo multijugador de disparos en primera persona de acción y terror. Situada posteriormente a una pandemia apocalíptica, la trama del videojuego enfrenta a cuatro supervivientes. El juego relata la historia de los supervivientes en múltiples situaciones con una misma finalidad: Huir de la zona infectada con vida.</dd>
-                    <dd>El modo multijugador + un mod que permita a 8 jugadores dentro de un servidor lo hace 10 veces más divertido.</dd>
+                    <dd>Esta es una que todos se saben: ¡El clasico de clasicos!. <abbr title="L4D">Left 4 Dead</abbr> es un juego cooperativo multijugador de disparos en primera persona de acción y terror. Situada posteriormente a una pandemia apocalíptica, la trama del videojuego enfrenta a cuatro supervivientes. El juego relata la historia de los supervivientes en múltiples situaciones con una misma finalidad: Huir de la zona infectada con vida.</dd>
+                    <dd>El modo multijugador + un mod que permite hasta ocho jugadores en un mismo servidor, lo hace diez veces más divertido.</dd>
                     <hr>
-                    <dd>Sitio oficial para la descarga: <a href="">L4D para PC</a> </dd>
+                    <dd>Sitio oficial para la descarga: <a href="https://store.steampowered.com/app/500/Left_4_Dead/?l=spanish">L4D para PC</a> </dd>
+                    <dd>Sitio oficial para la descarga: <a href="https://store.steampowered.com/app/550/Left_4_Dead_2/">L4D2 para PC</a> </dd>
                 </dl>
             </section>
         </article>
