Se añadio la base para la pagina del cuarto pasatiempo

--- a/atchz/pasatiempos2/pasatiempo4.html
+++ b/atchz/pasatiempos2/pasatiempo4.html
@@ -1,9 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pasatiempo 4</title>
-  </head>
-  <body></body>
+<html lang="es-MX">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="atchz" />
+        <meta name="description" content="Pagina sobre mi tercer pasatiempo" />
+        <meta name="keywords" content="uanl,facpya,lti" />
+        <title>Pasatiempo 3</title>
+    </head>
+    <body>
+        <header>
+            <h1>Tercer pasatiempo</h1>
+        </header>
+        <main>
+            <article>
+                <header><h2>Dibujo</h2></header>
+
+                <p>
+                    Dibujar solía ser uno de mis pasatiempos favoritos,
+                    especialmente durante la secundaria, cuando lo practicaba
+                    con mayor frecuencia. En ese entonces, me ayudaba a
+                    aprovechar el tiempo libre que tenía. Aunque ha pasado
+                    bastante tiempo desde la última vez que lo hice, sigo
+                    considerando el dibujo una actividad que disfruto mucho, y
+                    de vez en cuando me doy el gusto de retormalo.
+                </p>
+
+                <img
+                    src="https://images.pexels.com/photos/301792/pexels-photo-301792.jpeg"
+                    alt="tableta grafica de dibujo"
+                    width="300px"
+                />
+
+                <section>
+                    <header>
+                        <h3></h3>
+                    </header>
+                </section>
+
+                <footer></footer>
+            </article>
+        </main>
+        <aside>
+            <h4>Links relacionados con el contenido</h4>
+            <nav>
+                <ul>
+                    <li>
+                        <a target="_blank" href=""></a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+        <footer>
+            <p>
+                <abbr title="Universidad Autónoma de Nuevo León">UANL</abbr> -
+                <abbr title="Facultad de Contaduría Pública y Administración"
+                    >FACPYA</abbr
+                >
+            </p>
+        </footer>
+    </body>
 </html>
