correcion de titulo y descripcion

--- a/atchz/pasatiempos2/pasatiempo4.html
+++ b/atchz/pasatiempos2/pasatiempo4.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="atchz" />
-        <meta name="description" content="Pagina sobre mi tercer pasatiempo" />
+        <meta name="description" content="Pagina sobre mi cuarto pasatiempo" />
         <meta name="keywords" content="uanl,facpya,lti" />
-        <title>Pasatiempo 3</title>
+        <title>Pasatiempo 4</title>
     </head>
     <body>
         <header>
