--- a/TheRafaMan06/pasatiemposver2/pasatiempo3.html
+++ b/TheRafaMan06/pasatiemposver2/pasatiempo3.html
@@ -22,7 +22,7 @@
                 Deportes
             </a>
             
-            <a href="pasatiempo3.html" class="menu-button">
+            <a href="pasatiempo2.html" class="menu-button">
                 <span class="menu-icon">📺</span>
                 Series
             </a>
@@ -66,6 +66,7 @@
     </main>
     
     <aside>
+        <h3>Formulario de Comics</h3>
         <form>
             <label for="nombre">Tu nombre:</label>
             <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre" required><br>
