--- a/victoriabalderas/pasatiemposver2/mainpasatiempos.html
+++ b/victoriabalderas/pasatiemposver2/mainpasatiempos.html
@@ -7,55 +7,35 @@
     <meta name="keywords" content="uanl,facpya,lti">
     <meta name="author" content="vabg">
     <link rel="stylesheet" href="estilos.css">
-    <title>Practica 1</title>
+    <title>Practica 3</title>
 
 </head>
 <body>
-    <main>
-        <h1>ACERCA DE MI</h1>
-        <header>
-            <h2>¿Quién soy?</h2>
-        </header>
-        <p>¡Hola! Soy Victoria Balderas, estudiante de FACPYA. 
-            Aquí te comparto mis pasatiempos y gustos, de esas cosas que realmente me hacen sonreír.
-        </p>
+    <header>
+        <h1>Victoria Balderas</h1>
         <nav>
-            <ul>
-                <li><a href="pagina1.html"> La danza en mi vida</a></li>
-                <li><a href="pagina2.html"> Mis gustos musicales</a></li>
-                <li><a href="pagina3.html"> Mi trabajo</a></li>
-                <li><a href="pagina4.html"> Mis películas favoritas</a></li>
-                <li><a href="pagina5.html"> Musicales de Broadway</a></li>
-            </ul>
-        </nav>  
+            <a href="pagina1.html"> La danza en mi vida</a>    
+            <a href="pagina2.html"> Mis gustos musicales</a>
+            <a href="pagina3.html"> Mi trabajo</a>
+            <a href="pagina4.html"> Mis películas favoritas</a>
+            <a href="pagina5.html"> Musicales de Broadway</a>
+        </nav>
+    </header>
+    <div class="contenedor">
+        <main>
+            <h2>¿Quién soy?</h2>
+            <p>¡Hola! Soy Victoria Balderas Guevara, estudiante de la <i>Licenciatura en Tecnologías de la Información</i> en FACPYA. 
+            En esta página podrás saber más acerca de mis pasatiempos y gustos, de esas cosas que realmente me hacen sonreír y pasarla bien.</p>
+        </main>
 
-    </main>
-    <aside>
-        <form action="" >
-            <h3>¡Me gustaría saber tu opinión!</h3>
-            <label for="nombre">Nombre:</label>
-            <input placeholder="Ingresa tu nombre aquí" type="text" name="nombre" id="nombre">
-            <hr>
-            <label for="correo">Correo:</label>
-            <input placeholder="Ingresa tu correo aquí" type="email" name="email" id="email">
-            <hr>
-            <label for="pagina">Usuario de Github:</label>
-            <input placeholder="Escribe tu enlace aquí" type="url" name="Pagina" id="pagina">
-            <hr>
-            <label for="seccionfav">¿Cual fue tu sección favorita?</label>
-            <select type="seccion" name="seccionfav" id="seccionfav">
-                <option value="1">Danza</option>
-                <option value="2">Musica</option>
-                <option value="3">Trabajo</option>
-                <option value="4">Películas</option>
-                <option value="5">Musicales</option>
-            </select>
-            <hr>
-            <label for="comentario">Deja tu comentario:</label>
-            <input placeholder="Escribe tu opinión" type="text" name="comentario" id="comentario">
-            <hr>
-        </form>
-    </aside>
+        <aside>
+            <h3>Enlaces recomendados</h3>
+            <ul>
+                <li><a href="https://github.com/victoriabalderas">Mi perfil de Github</a></li>
+                <li><a href="https://github.com/victoriabalderas?tab=repositories">Otros proyectos</a></li>
+            </ul>
+        </aside>
+    </div>
 
     <footer>
         <address> Desarrollado por Victoria Abigail Balderas Guevara</address>
