--- a/victoriabalderas/pasatiemposver2/pagina1.html
+++ b/victoriabalderas/pasatiemposver2/pagina1.html
@@ -17,7 +17,8 @@
                 <a href="mainpasatiempos.html">Regresar a página principal</a>
             </ul>
         </nav>
-        <h1>La danza en mi vida</h1></header>
+        <h1>La danza en mi vida</h1>
+    </header>
     
     <main>
         <section>
