Final commit: Corrección de ortografía y pasatiempos completos.

--- a/SunnyWiltshire/P2v1/pasatiempo1.html
+++ b/SunnyWiltshire/P2v1/pasatiempo1.html
@@ -50,11 +50,12 @@
     <aside>
         <h1>Datos curiosos:</h1>
         <ul>
-            <li>El primer RPG que jugué fue Undertale, seguido de mogeko castle, la mayoría de estos RPG tenían tematicas de terror psicologico y temas que deberían de tomarse con discresión. Llegaron a quitarme el sueño en más de una noche.</li>
-            <li>Solo Corazón de Melón me logró atrapar con su historia, mi personaje favorito es Kentin, es un muchacho que fue a la escuela militarizada y de grande (en una línea alterna) se convierte en una persona que viaja con sus mascotas mientras publica sus aventuras en instagram. <a href="https://www.instagram.com/dogs.n.roads?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="  target="_blank">Checa su perfil aqui.</a></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>El primer RPG que jugué fue Undertale, seguido de Mogeko Castle. La mayoría de estos RPG tenían temáticas de terror psicológico y asuntos que deberían tomarse con discreción. Llegaron a quitarme el sueño en más de una noche.</li>
+            <li>Solo Corazón de Melón logró atraparme con su historia. Mi personaje favorito es Kentin, un muchacho que fue a la escuela militarizada y que, de grande (en una línea alterna), se convierte en una persona que viaja con sus mascotas mientras publica sus aventuras en Instagram. <a href="https://www.instagram.com/dogs.n.roads?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">Checa su perfil aquí.</a></li>
+            <li>Mi primera consola fue una Game Boy que compré en el mercado. Tenía juegos de Mario y se los prestaba a mi vecina para intercambiar juegos.</li>
+            <li>Los juegos de PlayStation son los que me han hecho llorar como nunca. Me encanta cómo, en ese entonces, los gráficos eran lo máximo y parecía que estabas viendo una película.</li>
+            <li>En la mayoría de videojuegos mi nickname siempre será SunnyWiltshire o alguna variación.</li>
+
         </ul>
     </aside>
     <footer>
