--- a/SunnyWiltshire/P2v1/pasatiempo3.html
+++ b/SunnyWiltshire/P2v1/pasatiempo3.html
@@ -30,7 +30,10 @@
             <footer>
             <p>Agradezco a la música por hacerme sentir mejor en muchos momentos y, más que nada, a BTS por todas esas veces que me ayudaron a salir de la depresión y me acompañaron cada vez que necesitaba llorar. Si a alguien le debo agradecer el que me haya levantado día con día, es a ellos.</p>
             <img width="500px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/BTS_during_a_White_House_press_conference_May_31%2C_2022_%28cropped%29.jpg/1920px-BTS_during_a_White_House_press_conference_May_31%2C_2022_%28cropped%29.jpg" alt="">
-            Por The White House - <a rel="nofollow" class="external free" href="https://twitter.com/WhiteHouse/status/1532053353894756352">https://twitter.com/WhiteHouse/status/1532053353894756352</a>, Dominio público, <a href="https://commons.wikimedia.org/w/index.php?curid=118596343">Enlace</a>
+            <small>Por The White House - <a rel="nofollow" class="external free" href="https://twitter.com/WhiteHouse/status/1532053353894756352">https://twitter.com/WhiteHouse/status/1532053353894756352</a>, Dominio público, <a href="https://commons.wikimedia.org/w/index.php?curid=118596343">Enlace</a></small>
+            
+            <p>Namjoon, más que nada, es la persona a quien más podría admirar. Siempre ha dado un mensaje de amor propio: querernos tal como somos, aceptar nuestras partes negativas y positivas, y luchar por ser mejores cada día.</p>
+            <cite>"Cuéntame tu historia. Sin importar quién eres, de dónde eres, tu color de piel o identidad de género, solo habla por ti mismo. Encuentra tu nombre y tu voz hablando por ti mismo." - Kim Namjoon</cite>
         </footer>
         </article>
         <p>Audio gracioso de multimedios para finalizar el articulo:</p>
@@ -39,24 +42,27 @@
     <aside>
         <h1>Datos curiosos:</h1>
         <ul>
-            <li>Quise empezar a poner mis playlist por mes porque me gust[o mucho la idea de poder recordar que escuchaba en x o y tiempo, dicen que los olores son la manera más fácil de recordar algo, pero yo creo que tambien los sonidos lo son, antes tenia las playlist por año, pero por mes me recodaba situaciones en especifico por alguna razón.</li>
-            <li>Ultimamente he estado escuchando mucho a Lil Tecca, Central Cee, Jungle, Jaehyun, Sabrina Carpenter, TWICE, Kendrick Lamar y Tyler, The creator.</li>
-            <li>Mis canciones favoritas del momento (Agosto 2025) son:
+            <li>Quise empezar a hacer mis playlists por mes porque me gustó mucho la idea de poder recordar qué escuchaba en determinado tiempo. Dicen que los olores son la manera más fácil de recordar algo, pero yo creo que los sonidos también lo son. Antes tenía las playlists por año, pero al hacerlas por mes me recordaban situaciones específicas por alguna razón.</li>
+            <li>Últimamente he estado escuchando mucho a Lil Tecca, Central Cee, Jungle, Jaehyun, Sabrina Carpenter, TWICE, Kendrick Lamar y Tyler, The Creator.</li>
+            <li>Mis canciones favoritas del momento (agosto 2025) son:
                 <ul>
-                    <li>TASTE- Lil Tecca</li>
+                    <li>TASTE - Lil Tecca</li>
                     <li>4U - Lil Tecca</li>
                     <li>Can't Get You - Jaehyun</li>
                     <li>Manchild - Sabrina Carpenter</li>
                     <li>Como Tú - Jaguares</li>
-                    <li>heart pt.6 - Kendrick Lamar</li>
-                    <li>Like Him - Tyler, The creator</li>
+                    <li>heart pt. 6 - Kendrick Lamar</li>
+                    <li>Like Him - Tyler, The Creator</li>
                     <li>Busy Woman - Sabrina Carpenter</li>
+                    <li>Let's Go Back - Jungle</li>
                 </ul>
             </li>
-            <li>Mis Blends son con personas super importantes para mi, Jesús, mi mejor amigo, es alguien con quien he empezado a tener muchos gustos en común gracias a esas playlist, el año pasado le compartía mis gustos musicales para que él los escuchara.</li>
+            <li>Mis Blends son con personas muy importantes para mí. Jesús, mi mejor amigo, es alguien con quien he empezado a compartir muchos gustos gracias a esas playlists; el año pasado yo le compartía mi música para que él la escuchara.</li>
         </ul>
 
+        <video controls width="500px" src="https://www.pexels.com/es-es/download/video/1793534/"></video>
     </aside>
+
     <footer>
         <p>Creado por: VLMG (AKA: SunnyW.py)</p>
     </footer>
