--- a/SunnyWiltshire/P2v1/pasatiempo4.html
+++ b/SunnyWiltshire/P2v1/pasatiempo4.html
@@ -13,16 +13,27 @@
         <h1>Dibujo🎨</h1>
     </header>
     <main>
-        
+        <article>
+            <header>
+                <h2>Arte, Dibujo y bocetos.</h2>
+            </header>
+            <p>Si bien también cuenta como arte, no suelo practicar demasiado el dibujo. He hecho muchísimos dibujos, pero siento que no son más que copias de otros. No he encontrado la manera de mejorar, ya que solo dibujo cuando estoy aburrida. Es más un pasatiempo para mí que algo que quiera desarrollar al punto de practicarlo con regularidad.</p>
+            <img width="500px" src="https://sunnywiltshire.github.io/Ev1P1/img/Dibujos.png" alt="Bocetos de dibujos.">
+            <footer>
+                La mayoría de mis dibujos los dejo incompletos y, por lo general, están esparcidos en mis libretas y apuntes.
+            </footer>
+        </article>
     </main>
     <aside>
         <h1>Datos curiosos:</h1>
         <ul>
-            <li>La mayoría de mis dibujos son hechos en libretas de mi escuela, mis apuntes están llenos de ellos.</li>
-            <li>Por lo general </li>
-            <li></li>
-            <li></li>
-        </ul>
+            <li>La mayoría de mis dibujos están hechos en libretas de mi escuela; mis apuntes están llenos de ellos.</li>
+            <li>Empecé a dibujar desde la escuela y, aunque no sabía mucho, realmente no podía dibujar por mi cuenta. Dibujaba más viendo referencias y copiando esos dibujos. Si eran dibujos míos, entonces eran la típica muchacha de cara redonda con fleco que solo llegaba a los hombros.</li>
+            <li>Mi mayor inspiración al dibujar son mis amigos; les he hecho una infinidad de dibujos de los cuales no tengo fotos, ya que la mayoría los regalo y olvido dónde los dejé.</li>
+            <li>Tenía un registro de todos los dibujos que había hecho, pero mi mamá los tiró a la basura porque ya estaban muy abandonados.</li>
+            <li>Por lo general, dejo los dibujos tal como están en la imagen, sin colorear ni delinear. A veces no tengo inspiración o ganas de delinearlos; hace mucho que dejé de hacerlo por miedo a arruinarlos. El estilo de ver los dibujos "sucios", como un boceto, me gusta más.</li>
+</ul>
+
     </aside>
     <footer>
         <p>Creado por: VLMG (AKA: SunnyW.py)</p>
