Finalizadas las paginas de los pasatiempos pero falta terminar la pagina principal

--- a/AlejandroRmzEsc/pasatiemposv2/hobbie1.html
+++ b/AlejandroRmzEsc/pasatiemposv2/hobbie1.html
@@ -13,7 +13,7 @@
         </h1>
     </header>
     <main>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium praesentium quasi illum eveniet, odit fuga maxime! Dignissimos et, dolorum repellendus nostrum saepe dolorem, itaque perferendis esse eos ullam ea doloremque.</p>
+        <p>Desde secundaria me ha encantado la magia, por lo que puede provocar en el publico, desde infantes hasta adultos mayores, es una actividad muy buena y requiere bastante habilidad, aqui dejo mis vertientes favoritas</p>
 
         <table>
             <tr>
