--- a/AlejandroRmzEsc/pasatiemposv2/index.html
+++ b/AlejandroRmzEsc/pasatiemposv2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1><strong></strong></h1>
+        <h1><strong>Pasatiemposv2</strong></h1>
     </header>
     <nav>
         <ul>
