--- a/AlejandroRmzEsc/pasatiemposv2/hobbie2.html
+++ b/AlejandroRmzEsc/pasatiemposv2/hobbie2.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <h1>
-            <strong>Musica</strong>
+            <strong>Escuchar musica</strong>
         </h1>
     </header>
     <main>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium praesentium quasi illum eveniet, odit fuga maxime! Dignissimos et, dolorum repellendus nostrum saepe dolorem, itaque perferendis esse eos ullam ea doloremque.</p>
+        <p>Disfruto de la musica, no por su letra, sino por lo que me generan las combinaciones de distitos instrumentos y sonidos digitalizados, creo sinceramente que cada genero tiene su complejidad asi como sus puntos debiles, pero creo que todos conllevam un grandioso trabajo detras</p>
 
         <table>
             <tr>
