--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li id="a17"><a href="#">HERNANDEZ SAUCEDA EVELYN MICHEL </a></li>
                 <li id="a18"><a href="Marikve7/index.html">Marikve7</a></li>
                 <li id="a19"><a href="RdeReimer/index.html">RdeReimer</a></li>
-                <li id="a20"><a href="chrischupapi/index.html">LOZANO RAMOS CHRISTIAN LEONARDO </a></li>
+                <li id="a20"><a href="chrischupapi/index.html">chrischupapi</a></li>
                 <li id="a21"><a href="ivanmane\index.html">ivanmane </a></li>
                 <li id="a22"><a href="SunnyWiltshire/index.html">SunnyWiltshire</a></li>
                 <li id="a23"><a href="#">MARTINEZ LOZANO LUIS EMILIANO </a></li>
