--- a/aaronrdzr/paginaweb2/index.html
+++ b/aaronrdzr/paginaweb2/index.html
@@ -12,7 +12,12 @@
     </header>
     <main>
        
-        <nav></nav>
+        <nav>
+            <form action="">
+                <label for="Pasatiempo"></label>
+                <select name="" id=""></select>
+            </form>
+        </nav>
 
         <article>
             
